syntax = "proto3";

package pb;

 

enum ResponseType {
  CODE = 0;
}
